# db-eplusout-reader

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: Tests.yml  python-package.yml  run-build.yml  run-tests.yml
db_eplusout_reader/: __init__.py  constants.py  db_esofile.py  exceptions.py  get_results.py  results_dict.py  sql_reader.py
db_eplusout_reader/processing/: esofile_reader.py  esofile_time.py  raw_eso_data.py
db_esofile_reader/: __init__.py  db_esofile.py  exceptions.py  get_results.py  resutls_dict.py  sql_reader.py
db_esofile_reader/processing/: esofile_reader.py  esofile_time.py  raw_eso_data.py
tests/: conftest.py  test_eso_file.py  test_results_dictionary.py  test_sql_results.py
