[tool.poetry]
name = "db-eplusout-reader"
version = "0.3.2"
description = ""
authors = ["Vojtech Panek <vojtech.panek@designbuilder.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pre-commit = "^3.6.1"
flake8 = "^7.0.0"
pylint = "^3.0.3"
isort = "^5.13.2"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
